--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=8081
+MONGODB_CNN=mongodb+srv://user_node_cafe:NA9rBi0yumueftbq@cluster0.ksss7.mongodb.net/cafeDB
+USER=user_node_cafe
+PASSWORD=NA9rBi0yumueftbq
